--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,7 @@ en:
     statistical: "Statistical"
     project_month: "Values List"
     checklist: "Checklist"
+    values: "Project values statistics"
   application:
     project_management: "Project Management"
     invalid_start_date: "Start date must be before end date"
@@ -63,6 +64,7 @@ en:
       lesson_learn: "Project lessons"
       statistics_resources: "Statistics project resources"
       dashboard_resources: "Project resource statistics chart"
+      statistics_values: "Project values statistics"
   user_mailer:
     password_reset:
       subject: "Password reset"
