--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -66,6 +66,7 @@ vi:
       dashboard_resources: "Biểu đồ thống kê tài nguyên dự án"
       statistics_values: "Thống kê values dự án"
       statistics_group: "Thống kê theo nhóm"
+      dashboard_values: "Biểu đồ thống kê values dự án"
   user_mailer:
     password_reset:
       subject: "Đặt lại mật khẩu"
@@ -706,3 +707,7 @@ vi:
   statistics_groups:
     search:
       average_month: "Tính trung bình các tháng"
+  dashboard_values:
+    index:
+      title: "Biểu đồ thống kê values dự án"
+      values_chart: "Values dự án"
