--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -237,6 +237,7 @@ vi:
       Project_Member: "Thành viên dự án"
       Add_New: "Thêm mới"
       Member_name: "Tên thành viên"
+      group: "Nhóm"
       Role: "Vai trò"
       Github_Account: "Tài khoản Github"
       joined_at: "Tham gia lúc"
